--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,7 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+
+*.zip
+# Références Composants/Boitier TrackSense/Modèles 3D/20-pin-male-female-double-row-pcb-socket-connector-1.snapshot.2.zip
