--- a/TestEcran_TFT_eSPI/platformio.ini
+++ b/TestEcran_TFT_eSPI/platformio.ini
@@ -18,8 +18,9 @@ framework = arduino
 monitor_filters = esp32_exception_decoder
 build_type = debug
 lib_deps = 
-	moononournation/GFX Library for Arduino@^1.3.6
-    ; bodmer/TFT_eSPI@^2.5.31
+	; moononournation/GFX Library for Arduino@^1.3.6
+    ; adafruit/Adafruit GC9A01A@^1.1.0
+    bodmer/TFT_eSPI@^2.5.31
     
 
 [env:DL]
