Écran fonctionnel avec Lilygo en VSPI

--- a/TestEcran_Adafruit_GC9A01A/platformio.ini
+++ b/TestEcran_Adafruit_GC9A01A/platformio.ini
@@ -49,25 +49,25 @@ lib_deps =
 
     
 
-[env:esp32dev_DL]
-board = ${env:esp32dev.board}
-upload_speed =  ${env:esp32dev.upload_speed}
-monitor_filters = ${env:esp32dev.monitor_filters}
-build_type = ${env:esp32dev.build_type}
-build_flags = ${env:esp32dev.build_flags}
-lib_deps = ${env:esp32dev.lib_deps}
-upload_port = COM4
-debug_port = COM4
-monitor_port = COM4
+; [env:esp32dev_DL]
+; board = ${env:esp32dev.board}
+; upload_speed =  ${env:esp32dev.upload_speed}
+; monitor_filters = ${env:esp32dev.monitor_filters}
+; build_type = ${env:esp32dev.build_type}
+; build_flags = ${env:esp32dev.build_flags}
+; lib_deps = ${env:esp32dev.lib_deps}
+; upload_port = COM5
+; debug_port = COM5
+; monitor_port = COM5
 
 
-[env:esp32doit-devkit-v1_DL]
-board = ${env:esp32doit-devkit-v1.board}
-board_build.filesystem = ${env:esp32doit-devkit-v1.board_build.filesystem}
-monitor_filters  = ${env:esp32doit-devkit-v1.monitor_filters}
-build_type = ${env:esp32doit-devkit-v1.build_type}
-build_flags = ${env:esp32doit-devkit-v1.build_flags}
-lib_deps = ${env:esp32doit-devkit-v1.lib_deps}
-upload_port = COM4
-debug_port = COM4
-monitor_port = COM4
+; [env:esp32doit-devkit-v1_DL]
+; board = ${env:esp32doit-devkit-v1.board}
+; board_build.filesystem = ${env:esp32doit-devkit-v1.board_build.filesystem}
+; monitor_filters  = ${env:esp32doit-devkit-v1.monitor_filters}
+; build_type = ${env:esp32doit-devkit-v1.build_type}
+; build_flags = ${env:esp32doit-devkit-v1.build_flags}
+; lib_deps = ${env:esp32doit-devkit-v1.lib_deps}
+; upload_port = COM5
+; debug_port = COM5
+; monitor_port = COM5
