--- a/HelloWorld/platformio.ini
+++ b/HelloWorld/platformio.ini
@@ -8,11 +8,44 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
+
+; [env:esp32doit-devkit-v1]
+; platform = espressif32
+; board = esp32doit-devkit-v1
+; framework = arduino
+; monitor_speed = 115200
+; board_build.filesystem = littlefs
+; monitor_filters  = esp32_exception_decoder
+; build_type = debug
+
+[env]
 platform = espressif32
-board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-board_build.filesystem = littlefs
-monitor_filters  = esp32_exception_decoder
+monitor_filters =
+	default
+	esp32_exception_decoder
 build_type = debug
+lib_deps = 
+
+
+
+[env:esp32dev]
+board = esp32dev
+upload_speed =  921600
+build_flags =
+    -DBOARD_HAS_PSRAM
+    -DCORE_DEBUG_LEVEL=3
+    -mfix-esp32-psram-cache-issue
+    ; -D BOARD=1
+lib_deps = 
+    ${env.lib_deps}
+
+
+[env:esp32doit-devkit-v1]
+board = esp32doit-devkit-v1
+board_build.filesystem = littlefs
+build_flags =
+    ; -D BOARD=2
+lib_deps =
+    ${env.lib_deps}
