--- a/src/AppEmbarqueeTS/platformio.ini
+++ b/src/AppEmbarqueeTS/platformio.ini
@@ -30,24 +30,24 @@ lib_deps =
     vshymanskyy/StreamDebugger @ ^1.0.1    ; Vraiment utile ? ; Selon Exemple GitHub officiel
 
 ; -----Screens-----
-    adafruit/Adafruit GC9A01A @ ^1.1.0
-    adafruit/Adafruit GFX Library @ ^1.11.7
+    ; adafruit/Adafruit GC9A01A @ ^1.1.0
+    ; adafruit/Adafruit GFX Library @ ^1.11.7
 
 ; -----GPS-----
     mikalhart/TinyGPSPlus@^1.0.3
 
 ; -----MPU6050-----
-    adafruit/Adafruit MPU6050@^2.2.4
+    ; adafruit/Adafruit MPU6050@^2.2.4
     ; jrowberg/I2Cdevlib-MPU6050@^1.0.0
     ; electroniccats/MPU6050@^1.0.0
 
 ; -----BMP180-----
-    adafruit/Adafruit BMP085 Library@^1.2.2
+    ; adafruit/Adafruit BMP085 Library@^1.2.2
     ; adafruit/Adafruit BMP180 Library @ ^1.0.4
 
 ; -----Compass *HMC5883L* or QMC5883L-----
-    https://github.com/jarzebski/Arduino-HMC5883L.git   ; Contient exemple calibration Compass du GY-87
-    jrowberg/I2Cdevlib-HMC5883L@^1.0.0
+    ; https://github.com/jarzebski/Arduino-HMC5883L.git   ; Contient exemple calibration Compass du GY-87
+    ; jrowberg/I2Cdevlib-HMC5883L@^1.0.0
     ; mprograms/QMC5883LCompass@^1.2.3
     ; adafruit/Adafruit HMC5883 Unified@^1.2.1 ; You will also need to install the Adafruit_Sensor library!
     ; adafruit/Adafruit Unified Sensor@^1.1.13
