Ajout classes boutons

--- a/src/AppEmbarqueeTS/platformio.ini
+++ b/src/AppEmbarqueeTS/platformio.ini
@@ -30,8 +30,8 @@ lib_deps =
     vshymanskyy/StreamDebugger @ ^1.0.1    ; Vraiment utile ? ; Selon Exemple GitHub officiel
 
 ; -----Screens-----
-    ; adafruit/Adafruit GC9A01A @ ^1.1.0
-    ; adafruit/Adafruit GFX Library @ ^1.11.7
+    adafruit/Adafruit GC9A01A @ ^1.1.0
+    adafruit/Adafruit GFX Library @ ^1.11.7
 
 ; -----GPS-----
     mikalhart/TinyGPSPlus@^1.0.3
