--- a/.gitignore
+++ b/.gitignore
@@ -408,3 +408,5 @@ Modèles 3D
 # Références Composants/GC9A01 - TFT LCD Display Module/Modèles 3D/1.28inch_LCD_Module_3D_Drawing/1.28inch LCD Module 3D Drawing/0508.stp
 # TestLTE_TinyGSM/.vscode/extensions.json
 src/AppEmbarqueeTS/.vscode/extensions.json
+src/Tests/TestLTE_TinyGSM/.vscode/extensions.json
+src/AppEmbarqueeTS/.vscode/extensions.json
