et platform.ini

--- a/src/AppEmbarqueeTS/platformio.ini
+++ b/src/AppEmbarqueeTS/platformio.ini
@@ -34,7 +34,7 @@ lib_deps =
     adafruit/Adafruit GFX Library @ ^1.11.7
 
 ; -----GPS-----
-    mikalhart/TinyGPSPlus @ ^1.0.3
+    ; mikalhart/TinyGPSPlus @ ^1.0.3    ; GPS provient de TinyGSM
 
 ; -----MPU6050-----
     ; adafruit/Adafruit MPU6050 @^2.2.4
