--- a/src/AppEmbarqueeTS/platformio.ini
+++ b/src/AppEmbarqueeTS/platformio.ini
@@ -25,6 +25,7 @@ build_flags =
     -DCORE_DEBUG_LEVEL=3
     -mfix-esp32-psram-cache-issue
 lib_deps = 
+    robtillaart/UUID @ ^0.1.5
 ; -----GSM-----
     vshymanskyy/TinyGSM @ ^0.11.7     ; Selon Exemple GitHub officiel
     vshymanskyy/StreamDebugger @ ^1.0.1    ; Vraiment utile ? ; Selon Exemple GitHub officiel
