--- a/src/AppEmbarqueeTS/.vscode/settings.json
+++ b/src/AppEmbarqueeTS/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "string": "cpp",
-        "new": "cpp"
+        "new": "cpp",
+        "*.tpp": "cpp"
     }
 }
