--- a/src/Tests/TestEcran_TFT_eSPI/platformio.ini
+++ b/src/Tests/TestEcran_TFT_eSPI/platformio.ini
@@ -9,23 +9,30 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 
-[env]
+
+[env:esp32dev]
+board = esp32dev
 platform = espressif32
-board = esp32doit-devkit-v1
-monitor_speed = 115200
 framework = arduino
-; board_build.filesystem = littlefs
-monitor_filters = esp32_exception_decoder
+monitor_speed = 115200
+upload_speed =  921600
+monitor_filters =
+	default
+	esp32_exception_decoder
 build_type = debug
+build_flags =
+    -DBOARD_HAS_PSRAM
+    -DCORE_DEBUG_LEVEL=3
+    -mfix-esp32-psram-cache-issue
 lib_deps = 
+    ; robtillaart/UUID @ ^0.1.5
+; -----GSM-----
+    ; vshymanskyy/TinyGSM @ ^0.11.7     ; Selon Exemple GitHub officiel
+    ; vshymanskyy/StreamDebugger @ ^1.0.1    ; Vraiment utile ? ; Selon Exemple GitHub officiel
+
+; -----Screens-----
 	; moononournation/GFX Library for Arduino@^1.3.6
     ; adafruit/Adafruit GC9A01A@^1.1.0
     bodmer/TFT_eSPI@^2.5.31
-    
-
-[env:DL]
-upload_port = COM4
-debug_port = COM4
-monitor_port = COM4
-
-[env:esp32doit-devkit-v1]
+    ; adafruit/Adafruit GC9A01A @ ^1.1.0
+    ; adafruit/Adafruit GFX Library @ ^1.11.7
