Création d'un board custom pour platformio.ini

--- a/src/AppEmbarqueeTS/platformio.ini
+++ b/src/AppEmbarqueeTS/platformio.ini
@@ -8,10 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; [platformio]
+; core_dir = src/AppEmbarqueeTS
 
 
-[env:esp32dev]
-board = esp32dev
+[env] 
+board = esp-wrover-kit-lilygo-tsim7000g-16mb
+; board = esp32dev
+; board = esp-wrover-kit
 platform = espressif32
 framework = arduino
 monitor_speed = 115200
@@ -19,7 +23,6 @@ upload_speed =  921600
 monitor_filters =
 	default
 	esp32_exception_decoder
-build_type = debug
 build_flags =
     -DBOARD_HAS_PSRAM
     -DCORE_DEBUG_LEVEL=3
@@ -55,4 +58,8 @@ lib_deps =
     ; adafruit/Adafruit Unified Sensor@^1.1.13
     ; multie/MultiCompass @ ^1.0.2
 
+[env:debug]
+build_type = debug
 
+[env:release]
+build_type = release
