add default_envs = debug

--- a/src/AppEmbarqueeTS/platformio.ini
+++ b/src/AppEmbarqueeTS/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; [platformio]
-; core_dir = src/AppEmbarqueeTS
+[platformio]
+default_envs = debug
 
 
 [env] 
@@ -24,11 +24,13 @@ monitor_filters =
 	default
 	esp32_exception_decoder
 build_flags =
+    -D VERSION=0.4.0
     -DBOARD_HAS_PSRAM
     -DCORE_DEBUG_LEVEL=3
     -mfix-esp32-psram-cache-issue
 lib_deps = 
     robtillaart/UUID @ ^0.1.5
+
 ; -----GSM-----
     vshymanskyy/TinyGSM @ ^0.11.7     ; Selon Exemple GitHub officiel
     vshymanskyy/StreamDebugger @ ^1.0.1    ; Vraiment utile ? ; Selon Exemple GitHub officiel
@@ -60,6 +62,13 @@ lib_deps =
 
 [env:debug]
 build_type = debug
+build_flags = -D DEBUG
+lib_deps =
+    ${env.lib_deps}
+
 
 [env:release]
 build_type = release
+build_flags = -D RELEASE
+lib_deps =
+    ${env.lib_deps}
