Corriger le fichier platformio.ini

--- a/src/AppEmbarqueeTS/platformio.ini
+++ b/src/AppEmbarqueeTS/platformio.ini
@@ -62,13 +62,17 @@ lib_deps =
 
 [env:debug]
 build_type = debug
-build_flags = -D DEBUG
+build_flags = 
+    ${env.build_flags}
+    -D DEBUG
 lib_deps =
     ${env.lib_deps}
 
 
 [env:release]
 build_type = release
-build_flags = -D RELEASE
+build_flags = 
+    ${env.build_flags}
+    -D RELEASE
 lib_deps =
     ${env.lib_deps}
