--- a/src/Tests/TestVoltageBatterie/platformio.ini
+++ b/src/Tests/TestVoltageBatterie/platformio.ini
@@ -14,8 +14,6 @@
 
 [env] 
 board = esp-wrover-kit-lilygo-tsim7000g-16mb
-; board = esp32dev
-; board = esp-wrover-kit
 platform = espressif32
 framework = arduino
 monitor_speed = 115200
@@ -37,15 +35,17 @@ build_flags =
     -D DEBUG
 
 [env:test]
-build_type = test
+; build_type = test
 build_flags =
     ${env.build_flags}
     -D TEST
 test_build_src = true
 test_filter = *
 ; test_ignore = test/test_main.cpp
+; test_ignore = test/test_sortData.cpp
 ; test_port = /dev/ttyUSB0
 test_speed = 115200
 ; test_transport = serial
 ; test_ignore_failures = true
+test_framework = googletest
 lib_deps = google/googletest@^1.12.1 ; https://github.com/google/googletest.git
