--- a/src/AppEmbarqueeTS/platformio.ini
+++ b/src/AppEmbarqueeTS/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; [platformio]
-; default_envs = debug
+[platformio]
+default_envs = release
 
 
 [env] 
