Test de la lecture du VBat - Fonctionnel

--- a/src/Tests/TestVoltageBatterie/platformio.ini
+++ b/src/Tests/TestVoltageBatterie/platformio.ini
@@ -26,6 +26,9 @@ build_flags =
     -DBOARD_HAS_PSRAM
     -DCORE_DEBUG_LEVEL=3
     -mfix-esp32-psram-cache-issue
+; board_build.filesystem = littlefs
+; built-in avaiable thanks to https://github.com/espressif/arduino-esp32/blob/master/tools/partitions/default_16MB.csv
+; board_build.partitions = default_16MB.csv
 ; lib_deps = 
 
 [env:debug]
@@ -43,9 +46,6 @@ test_build_src = true
 test_filter = *
 ; test_ignore = test/test_main.cpp
 ; test_ignore = test/test_sortData.cpp
-; test_port = /dev/ttyUSB0
 test_speed = 115200
-; test_transport = serial
-; test_ignore_failures = true
 test_framework = googletest
 lib_deps = google/googletest@^1.12.1 ; https://github.com/google/googletest.git
