--- a/src/AppEmbarqueeTS/platformio.ini
+++ b/src/AppEmbarqueeTS/platformio.ini
@@ -28,8 +28,8 @@ build_flags =
     -DBOARD_HAS_PSRAM
     -DCORE_DEBUG_LEVEL=3
     -mfix-esp32-psram-cache-issue
-board_build.filesystem = littlefs
-board_build.partitions = default_16MB.csv
+; board_build.filesystem = littlefs
+; board_build.partitions = default_16MB.csv
 lib_deps = 
     robtillaart/UUID @ ^0.1.5
     bblanchon/ArduinoJson @ ^6.18.0
