--- a/src/AppEmbarqueeTS/platformio.ini
+++ b/src/AppEmbarqueeTS/platformio.ini
@@ -15,7 +15,6 @@ default_envs = release
 [env] 
 board = esp-wrover-kit-lilygo-tsim7000g-16mb
 ; board = esp32dev
-; board = esp-wrover-kit
 platform = espressif32
 framework = arduino
 monitor_speed = 115200
@@ -26,10 +25,7 @@ monitor_filters =
 build_flags =
     -D VERSION=0.4.0
     -DBOARD_HAS_PSRAM
-    -DCORE_DEBUG_LEVEL=3
     -mfix-esp32-psram-cache-issue
-; board_build.filesystem = littlefs
-; board_build.partitions = default_16MB.csv
 lib_deps = 
     robtillaart/UUID @ ^0.1.5
     bblanchon/ArduinoJson @ ^6.18.0
@@ -67,7 +63,14 @@ lib_deps =
 build_type = debug
 build_flags = 
     ${env.build_flags}
+    -DCORE_DEBUG_LEVEL=5
     -D DEBUG
+monitor_filters =
+	${env.monitor_filters}
+    time
+    log2file
+    ; hexlify
+; debug_tool =  ftdi
 lib_deps =
     ${env.lib_deps}
 
@@ -76,6 +79,7 @@ lib_deps =
 build_type = release
 build_flags = 
     ${env.build_flags}
+    -DCORE_DEBUG_LEVEL=3
     -D RELEASE
 lib_deps =
     ${env.lib_deps}
