--- a/src/Tests/TestMultithreading/platformio.ini
+++ b/src/Tests/TestMultithreading/platformio.ini
@@ -15,7 +15,6 @@ default_envs = debug
 [env] 
 board = esp-wrover-kit-lilygo-tsim7000g-16mb
 ; board = esp32dev
-; board = esp-wrover-kit
 platform = espressif32
 framework = arduino
 monitor_speed = 115200
@@ -26,19 +25,30 @@ monitor_filters =
 build_flags =
     -D VERSION=0.4.0
     -DBOARD_HAS_PSRAM
-    -DCORE_DEBUG_LEVEL=3
     -mfix-esp32-psram-cache-issue
 lib_deps =
 
 [env:debug]
 build_type = debug
-build_flags = -D DEBUG
+build_flags = 
+    ${env.build_flags}
+    -DCORE_DEBUG_LEVEL=5
+    -D DEBUG
+monitor_filters =
+	${env.monitor_filters}
+    time
+    log2file
+    ; hexlify
+; debug_tool =  ftdi
 lib_deps =
     ${env.lib_deps}
 
 
 [env:release]
 build_type = release
-build_flags = -D RELEASE
+build_flags = 
+    ${env.build_flags}
+    -DCORE_DEBUG_LEVEL=3
+    -D RELEASE
 lib_deps =
     ${env.lib_deps}
