--- a/src/Tests/TestEcran_TFT_eSPI/platformio.ini
+++ b/src/Tests/TestEcran_TFT_eSPI/platformio.ini
@@ -11,19 +11,22 @@
 
 
 [env:esp32dev]
-board = esp32dev
+board = esp-wrover-kit-lilygo-tsim7000g-16mb
 platform = espressif32
 framework = arduino
+build_type = debug
 monitor_speed = 115200
 upload_speed =  921600
 monitor_filters =
 	default
 	esp32_exception_decoder
-build_type = debug
+    time
+    log2file
 build_flags =
     -DBOARD_HAS_PSRAM
-    -DCORE_DEBUG_LEVEL=3
     -mfix-esp32-psram-cache-issue
+    -DCORE_DEBUG_LEVEL=5
+    -D DEBUG
 lib_deps = 
     ; robtillaart/UUID @ ^0.1.5
 ; -----GSM-----
@@ -36,3 +39,11 @@ lib_deps =
     bodmer/TFT_eSPI@^2.5.31
     ; adafruit/Adafruit GC9A01A @ ^1.1.0
     ; adafruit/Adafruit GFX Library @ ^1.11.7
+
+
+
+    
+
+
+
+
